fix for reset theme
